docs/errors/examples/undefined-identifier-typo/undefined-identifier-typo.grob
// E1001 — referencing an identifier that was never declared
fn greet(name: string): string {
    return "Hello, ${nmae}"
}

print(greet("world"))
